# shopee_ads

./: .env.example  .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
config/: shops.example.yaml  shops.yaml
docs/: BASELINE_SCOPE.md  GITHUB_SECURITY_SETUP.md  GIT_AND_OPERATIONS_GUARDRAILS.md  README.md  REPO_CLEANUP_BACKLOG.md  ops.md  runbook_ads_rate_limit.md  runbook_samord_minmin_live_ads_ingest.md  runbook_samord_minmin_probe.md  shopee_explorer.md  shopee_plan_runner.md
scripts/: baseline_guard.py  bootstrap_git_repo.ps1  cleanup_runtime_local.ps1  connect_github.ps1  git_commit_safe.ps1  git_secret_guard.py  git_security_status.ps1  repo_hygiene_audit.py  security_scan_artifacts.py
tests/: test_ads_campaign_daily_ingest_idempotent.py  test_ads_campaign_probe.py  test_ads_campaign_setting_info_chunking.py  test_ads_daily_param_fallback.py  test_ads_gms_ingest_smoke.py  test_ads_gms_probe.py  test_ads_ingest.py  test_ads_live_plan_ingest.py  test_ads_rate_limit_state_persistence.py  test_ads_snapshot_perf_normalize.py  test_alerts.py  test_campaign_breakdown_403_cooldown_gate.py  test_campaign_breakdown_auto_fallback.py  test_campaign_product_aliases.py  test_cli.py  test_config.py  test_deploy_templates_monitoring_flags.py  test_deploy_templates_phase1_service_unit.py  test_discord_alert_embed.py  test_discord_attach_report_md_dry_run.py  test_discord_attach_report_zip_dry_run.py  test_discord_budget_snippet.py  test_discord_notifier.py  test_discord_report_embed.py  test_discord_report_message_instructions.py  test_discord_report_url_builder.py  (+87 more)
(+73 files in other folders)
