[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotori-shopee-automation"
version = "0.1.0"
description = "Shopee automation project skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "sqlalchemy>=2.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "typer>=0.9",
  "httpx>=0.25",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dotori_shopee_automation", "dotori_shopee_automation.ads", "dotori_shopee_automation.shopee"]

[tool.pytest.ini_options]
testpaths = ["tests"]
